# shushu

./: pyproject.toml
e2e/scripts/: conftest.py  test_integration.py
e2e/scripts/fixtures/: html_sources.py
shushu/: actions.py  base.py  core.py  exceptions.py  logger.py  main.py  models.py  settings.py  types.py
shushu/data_processors/: base.py  exceptions.py  factory.py  python_code.py
shushu/interfaces/: base.py  cli.py  factory.py
shushu/storages/: base.py  factory.py  local_file.py
shushu/web_agents/: base.py  exceptions.py  factory.py  selenium.py
shushu/web_agents/selenium_drivers/: base.py  chrome.py  exceptions.py  factory.py
tests/: conftest.py  test_core.py  test_package.py
tests/data_processors/: test_factory.py  test_python_code.py
tests/interfaces/: test_factory.py
tests/storages/: test_factory.py  test_local_file.py
tests/web_agents/: test_factory.py  test_selenium.py
tests/web_agents/selenium_drivers/: test_base.py  test_factory.py
