[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]


[project]
name = "shushu"
description = "shushu is a data collection app"
authors = [
    {name = "osoken"},
]
dynamic = [
    "version", 
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "pydantic",
    "pydantic_settings",
    "JSON-log-formatter",    
    "oltl @ git+https://github.com/osoekawaitlab/ol-type-library",
    "beautifulsoup4",
    "selenium",
    "ipython",
]

[project.urls]
Source = "https://github.com/osoekawaitlab/shushu"

[tool.setuptools]
packages=["shushu"]

[tool.setuptools.package-data]
shushu = ["py.typed"]

[project.optional-dependencies]
dev=[
    "black",
    "flake8",
    "pyproject-flake8",
    "pytest",
    "mypy",
    "tox",
    "isort",
    "pytest-mock",
    "pytest-cov",
    "freezegun",
    "types-python-dateutil",
    "types-beautifulsoup4",
    "factory_boy",
    "polyfactory",
]
prod=[
]


[tool.pytest.ini_options]
addopts = ["-sv", "--doctest-modules", "--cov=shushu", "--cov-report=xml", "--cov-report=term-missing"]
testpaths = ["tests", "shushu"]
filterwarnings = [
    "error",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,E701"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs/"

[tool.pydantic.mypy]
init_typed = true

[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
    [tox]
    skipsdist = true
    envlist = py310

    [testenv]
    setenv = 
        VIRTUALENV_PIP = 24.0
    deps =
        -e .[dev]
    commands = 
        black shushu tests
        isort shushu tests
        pytest
        pflake8 shushu/ tests/ stubs/
        mypy shushu --strict --show-traceback
        mypy tests --strict

    [testenv:e2e]
    passenv = DISPLAY
    setenv = 
        VIRTUALENV_PIP = 24.0
    deps =
        -e .[dev]
    commands =
        pytest e2e
"""